--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </a>
       </li>
       <li>
-        <a href="" class="project-link">
+        <a href="./editor.html" class="project-link">
           >&nbsp; Форматування тексту
         </a>
       </li>
